--- a/index.html
+++ b/index.html
@@ -19,30 +19,88 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="smart-portable-chair" class="anchor" href="#smart-portable-chair" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Smart Portable Chair</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>### Welcome to My Project                       <a href="https://guides.github.com/features/mastering-markdown/"> SPC </a></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="group-members" class="anchor" href="#group-members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Group members</h2>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="id-matricola--last-name--first-name------e-mail------------github---------role-in-the-project" class="anchor" href="#id-matricola--last-name--first-name------e-mail------------github---------role-in-the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ID (matricola)  Last Name  First Name      e-mail            GitHub         Role in the Project</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ol>
+<li>S173535             TAHA           HASSAN      <a href="mailto:hthassan12@gmail.com">hthassan12@gmail.com</a>     Hassan-T       Programmer</li>
+<li>S206200      KARZOUN        MAHER       <a href="mailto:maher.karzoun@gmail.com">maher.karzoun@gmail.com</a>  MaherKarzoun   Programmer</li>
+</ol>
+
+<h1>
+<a id="vision" class="anchor" href="#vision" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vision</h1>
+
+<p>Users will never feel guilty for neglecting their own well-being ,every day will be a pleasing experience and they will never have tired . </p>
+
+<p>Your place, your devices and  your times, will team up to personalize the optimum smart portable chair personalized to you, and personalized to your daily activities , location, and the amount of time you sit .</p>
+
+<p>The system will exploit different means to make the  user stand  from his chair. You will  receive a voice alerts and suggestions according to the user preferences,the time and the location . </p>
+
+<p>It will automatically ring according to the user’s hours of sitting on a chair . 
+If you neglect the alarm the system will force you to stand by communicating with your acting device(computer,smartphone and/or TV) and turn off (block) it’s screen ,the screen will turn on after at least 2 minutes from your movement.</p>
+
+<h1>
+<a id="ami-main-steps" class="anchor" href="#ami-main-steps" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>AmI main steps</h1>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="sensing" class="anchor" href="#sensing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sensing:</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>SPC system will sense the day time,location and the amount of time you sit on your chair.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="reasoning" class="anchor" href="#reasoning" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reasoning:</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>recognize the user location,provide with the suitable activities . estimate the break time and the benefits that the user received.</p>
+
+<h3>
+<a id="acting" class="anchor" href="#acting" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acting:</h3>
+
+<p>The system will notify you that you reach  the maximum allowed sitting time.In case you neglect the alert ,SPC will turn off your acting device screen.</p>
+
+<h3>
+<a id="interacting-" class="anchor" href="#interacting-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interacting :</h3>
+
+<h1>
+<a id="ami-features-" class="anchor" href="#ami-features-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>AmI features :</h1>
+
+<h3>
+<a id="sensitive-" class="anchor" href="#sensitive-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sensitive :</h3>
+
+<p>SPC will sense the amount of time you sit.</p>
+
+<h3>
+<a id="responsive---according-to-the-day-time-and-the-user-location-spc--will-propose-you-some-activities-to-do-in-your-break-after-leaving-your-chair" class="anchor" href="#responsive---according-to-the-day-time-and-the-user-location-spc--will-propose-you-some-activities-to-do-in-your-break-after-leaving-your-chair" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Responsive : # According to the day time and the user location ,SPC  will propose you some activities to do in your break after leaving your chair.</h3>
+
+<h3>
+<a id="adaptive-" class="anchor" href="#adaptive-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Adaptive :</h3>
+
+<p>SPC is able to adapt to the location.</p>
+
+<h3>
+<a id="ubiquitous-" class="anchor" href="#ubiquitous-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubiquitous :</h3>
+
+<p>SPC can be installed on  the couch , in an office chair ,in a car and in  any place you need.</p>
+
+<h3>
+<a id="intelligent" class="anchor" href="#intelligent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Intelligent:</h3>
+
+<p>the user can know the amount of sitting time ,breaks he did during the day
+ and the benefits he/she received from SPC .
+ SPC will provide the user with voice suggestion at each break according to the user location.</p>
+
+<h3>
+<a id="transparent-" class="anchor" href="#transparent-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Transparent :</h3>
+
+<h1>
+<a id="-open-issues-" class="anchor" href="#-open-issues-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* Open issues *</h1>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/GroupPolito2016/Design">Design</a> is maintained by <a href="https://github.com/GroupPolito2016">GroupPolito2016</a>.</span>
