--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <h1>
 <a id="smart-portable-chair" class="anchor" href="#smart-portable-chair" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Smart Portable Chair</h1>
 
-<p>### Welcome to My Project                       <a href="https://guides.github.com/features/mastering-markdown/"> SPC </a></p>
+<p> <a> Welcome to My Project      </a>     <a href="https://guides.github.com/features/mastering-markdown/"> SPC </a></p>
 
 <h2>
 <a id="group-members" class="anchor" href="#group-members" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Group members</h2>
 
 <h3>
-<a id="id-matricola--last-name--first-name------e-mail------------github---------role-in-the-project" class="anchor" href="#id-matricola--last-name--first-name------e-mail------------github---------role-in-the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ID (matricola)  Last Name  First Name      e-mail            GitHub         Role in the Project</h3>
+<a id="id-matricola   last name     first name      e-mail            github                role-in-the-project" class="anchor" href="#id-matricola--last-name--first-name------e-mail------------github---------role-in-the-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ID (matricola)  Last Name  First Name      e-mail            GitHub         Role in the Project</h3>
 
 <ol>
 <li>S173535             TAHA           HASSAN      <a href="mailto:hthassan12@gmail.com">hthassan12@gmail.com</a>     Hassan-T       Programmer</li>
